    - ability to filter out files by size of their fragments was added
      (fragment_size_threshold option in GUI; UD_FRAGMENT_SIZE_THRESHOLD
      environment variable in command line tool and boot time interface)
    - ability to tune the disk optimization by UD_OPTIMIZER_FILE_SIZE_THRESHOLD
      environment variable (optimizer_file_size_threshold GUI option) was added
    - MFT optimization was forced to do nothing silently on non-NTFS disks
    - Windows NT 4.0 and Windows 2000 support was dropped because of
      weakness of the Windows Defrag API on these systems;
      for these people who still use old Windows editions
      we recommend to use the 5.0.x series of UltraDefrag
    - low color depth (8 bits per pixel) support was dropped for GUI toolbar
    - quite useless cyan color removed from the cluster map
    - icons were redesigned to reach better appearance
      on Windows Vista and above
    - Internals: flags field removed from winx_file_disposition structure
    - MS Visual Studio 6.0 development environment support dropped
    - many zenwinx prototypes changed by replacing short keyword by wchar_t
    - unsafe IncreaseGoogleAnalyticsCounterAsynch routine
      removed from wgx library
    - useless fat32_xxx fields removed from winx_volume_information structure
    - Windows Server 2003 DDK needs to be patched in order to compile
      the program; look at rsc/compilation.dox for details


  Version 5.0.4  2012-03-
  ------------------------------------------------------------------------------
    - taskbar icon overlay indicating that a job is running was added
      for Windows 7 and more recent Windows editions; it can be turned
      on/off by show_taskbar_icon_overlay GUI option
    - menu item to manually check for updates added
    - the following translations were updated:

      Korean, French (FR), Spanish (AR), Croatian
      
    - Internals: WgxSetTaskbarIconOverlay, WgxRemoveTaskbarIconOverlay